fix gallery on mobile

--- a/css/gallery.css
+++ b/css/gallery.css
@@ -13,9 +13,20 @@ section.gallery {
 	padding: 0.5rem;
 	border: 0.15rem var(--accent-color) solid;
 	border-radius: 0.5rem;
-	max-width: min-content;
+	max-width: 100%;
 }
 
 .gallery-image img {
-	height: 20rem;
+	width: 100%;
+}
+
+/* desktop */
+@media only screen and (min-width: 1400px) {
+	.gallery-image {
+		max-width: min-content;
+	}
+	.gallery-image img {
+		height: 20rem;
+		width: auto;
+	}
 }
